--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Pixel Art Maker!</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    
+</head>
+<body>
+    <h1>Lab: Pixel Art Maker</h1>
+
+    <h2>Choose Grid Size</h2>
+    <form id="sizePicker">
+        Grid Height:
+        <input type="number" id="inputHeight" name="height" min="1" >
+        Grid Width:
+        <input type="number" id="inputWeight" name="width" min="1" >
+        <input  id="clickedbutton" type="button" value="Validate">
+        <input  id="resetbutton" type="button" value="Reset">
+        <input  id="removebutton" type="button" value="Remove">
+    </form>
+
+    <h2>Pick A Color</h2>
+    <input type="color" id="colorPicker">
+
+    <h2>Design Canvas</h2>
+    <table id="pixelCanvas" ></table>
+  
+    <script src="designs.js"></script>
+</body>
+</html>
